2008-10-28  Don Porter  <dgp@users.sourceforge.net>

	* tests/canvText.test:	Backport test updates in light of the
	* tests/entry.test:	2008-10-05 commit.

	* generic/tkEntry.c:	Fix missing space constructing the scroll
	command.

2008-10-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* win/tkWinScrlbr.c:		Convert 'sprintf(..."%g"...)' to the
	* macosx/tkMacOSXScrlbr.c:	locale-insensitive Tcl_PrintDouble.
	* generic/tkScrollbar.c:	[Bug 2112563]  NOTE: Tcl_PrintDouble
	* generic/tkListbox.c:		is sensitive to the value of
	* generic/tkEntry.c:		::tcl_precision.
	* generic/tkCanvText.c:		*** POTENTIAL INCOMPATIBILITY ***
	* generic/tkArgv.c:

2008-08-25  Todd M. Helfter  <tmh@users.sourceforge.net>

	* library/menu.tcl: additional fix for [Bug 1023955]

2008-09-08  Todd M. Helfter  <tmh@users.sourceforge.net>

	* doc/menu.n: fix typo in docs [Bug 2098425]

2008-08-28  Don Porter  <dgp@users.sourceforge.net>

	* unix/tkConfig.sh.in:	Added @XFT_LIBS@ to the definition of TK_LIBS
	to avoid link failures when a "big wish" program links against a
	--disable-shared build of libtk.  (Discovered building expectTk).

	* generic/tk.h:		Bump version number to 8.5.5b1 to distinguish
	* library/tk.tcl:	CVS development snapshots from the 8.5.4 and
	* unix/configure.in:	8.5.5 releases.
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf (2.59)
	* win/configure:

2008-08-25  Todd M. Helfter  <tmh@users.sourceforge.net>

	* library/menu.tcl: fix typo from [Bug 1023955]

2008-08-25  Todd M. Helfter <tmh@users.sourceforge.net>

	* library/menu.tcl : Do not flip to the arrow cursor on menus.
	This was a Motif convention.  Current behavior is maintained if
	tk_strictMotif is enabled.  [Bug 1023955]

2008-08-25  Todd M. Helfter <tmh@users.sourceforge.net>

	The patch is associated with the bug tracker id: 1936220
	library/tkfbox.tcl : fix the multiple selection error for
	tk_getOpenFile -multiple 1 which fails on all unix platforms since